# cloud-finops-skills

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  INSTALLATION.md  README.md  claude-hooks-settings.json  fcp-coverage.md  install.sh  llms.txt  plan-remediation-incoherences.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: auto-tag-on-plugin-bump.yml  publish-mcp.yml  release.yml
cloud-finops/: POWER.md  SKILL.md
cloud-finops/.claude/: settings.local.json
cloud-finops/playbooks/: README.md  aws-cross-az-egress.md  aws-gpu-for-cpu-bound-workload.md  aws-gpu-instance-oversized.md  aws-idle-load-balancer.md  aws-mig-candidate.md  aws-multi-gpu-underutilized.md  aws-orphaned-ebs-volumes.md  aws-outdated-gpu-generation.md  aws-oversized-rds.md  aws-sagemaker-idle-endpoint.md  aws-sagemaker-mme-consolidation.md  aws-sagemaker-notebook-always-on.md  aws-snapshot-sprawl.md  aws-zombie-nat-gateway.md  azure-app-service-overprovisioned.md  azure-idle-sql-database.md  azure-log-analytics-sprawl.md  azure-orphan-disks.md  cross-cloud-schedule-blindness.md  cross-cloud-untagged-spend-drift.md  gcp-cloud-functions-cold-starts.md  gcp-idle-gke-autopilot.md  gcp-orphan-persistent-disks.md
cloud-finops/references/: finops-ai-dev-tools.md  finops-ai-self-hosted-vs-managed.md  finops-ai-value-management.md  finops-allocation-showback.md  finops-anomaly-management.md  finops-anthropic.md  finops-aws.md  finops-azure-openai.md  finops-azure.md  finops-bedrock.md  finops-chargeback.md  finops-databricks.md  finops-fabric.md  finops-for-ai.md  finops-framework.md  finops-gcp.md  finops-genai-capacity.md  finops-itam.md  finops-kubernetes.md  finops-oci.md  finops-onboarding-workloads.md  finops-sam.md  finops-snowflake.md  finops-tagging.md  finops-vertexai.md  finops-waste-detection-playbooks.md  greenops-cloud-carbon.md  optimnow-methodology.md
docs/: pipeline-audit-2026-05.md  pipeline-harden-plan.md
mcp_server/: README.md  pyproject.toml
mcp_server/scripts/: sync_references.py
mcp_server/src/cloud_finops_mcp/: __init__.py  __main__.py  metadata.py  server.py  tools.py
mcp_server/src/cloud_finops_mcp/data/: .gitignore
mcp_server/tests/: conftest.py  test_e2e.py  test_metadata.py  test_tools.py
scripts/: fcp-coverage.sh
skills/cloud-finops/: POWER.md
skills/cloud-finops/playbooks/: README.md  aws-cross-az-egress.md  aws-gpu-for-cpu-bound-workload.md  aws-gpu-instance-oversized.md  aws-idle-load-balancer.md  aws-mig-candidate.md  aws-multi-gpu-underutilized.md  aws-orphaned-ebs-volumes.md  aws-sagemaker-mme-consolidation.md  azure-app-service-overprovisioned.md  azure-idle-sql-database.md  azure-log-analytics-sprawl.md  cross-cloud-untagged-spend-drift.md  gcp-idle-gke-autopilot.md
skills/cloud-finops/references/: finops-ai-dev-tools.md  finops-ai-self-hosted-vs-managed.md  finops-anomaly-management.md  finops-aws.md  finops-azure.md  finops-bedrock.md  finops-for-ai.md  finops-framework.md  finops-gcp.md  (+1 more)
